crates/vise/tests/ui/labels/bogus_field_type.stderr
error[E0277]: the trait bound `Vec<String>: EncodeLabelValue` is not satisfied
 --> tests/ui/labels/bogus_field_type.rs:5:5
  |
5 |     method: Vec<String>,
  |     ^^^^^^ the trait `EncodeLabelValue` is not implemented for `Vec<String>`
  |
  = help: the following other types implement trait `EncodeLabelValue`:
            &String
            &str
            Arc<T>
            Box<T>
            Cow<'_, str>
            DurationAsSecs
            LabelRef<'_, S>
            Option<T>
          and $N others
